fixed login layout to align for mobile and large screen

--- a/BankWeb/wwwroot/assets/css/templatemo-finance-business.css
+++ b/BankWeb/wwwroot/assets/css/templatemo-finance-business.css
@@ -60,6 +60,14 @@ body, html {
     .mobile-github-aboutme {
         margin-top: 20px;
     }
+
+    .login-mobile-padding {
+        padding-left: 0 !important;
+    }
+}
+
+.login-mobile-padding {
+    padding-left: 20px;
 }
 
 #account {
